# EV_project

./: Bus.cpp  Bus.h  CMakeLists.txt  README.md  SPFA.cpp  SPFA.h  index.html  main.cpp  parameters.h
coin-or/: CoinUtilsConfig.h
lib/: libCbc.0.dylib  libCbc.dylib  libCbc.la  libCgl.0.dylib  libCgl.la  libClp.0.dylib  libClp.dylib  libClp.la  libCoinUtils.0.dylib  libCoinUtils.dylib  libCoinUtils.la  libOsi.0.dylib  libOsi.la  libOsiCbc.0.dylib  libOsiCbc.dylib  libOsiCbc.la  libOsiClp.0.dylib  libOsiClp.dylib  libOsiClp.la  libOsiCommonTest.0.dylib  libOsiCommonTest.dylib  libOsiCommonTest.la
lib/pkgconfig/: cbc.pc  cgl.pc  clp.pc  coindatamiplib3.pc  coindatasample.pc  coinutils.pc  osi-cbc.pc  osi-clp.pc  osi-unittests.pc  osi.pc
